Changed HA role from 'primary' to 'replica' in configuration files and updated related tests to ensure proper functionality. Adjusted acceptance tests to start keepalived services before running scenarios and removed outdated priority validation tests.

--- a/data/common.yaml
+++ b/data/common.yaml
@@ -25,11 +25,10 @@ ha_adguard::enable_dnssec: true
 ha_adguard::enable_filtering: true
 
 ha_adguard::ha_enabled: false
-ha_adguard::ha_role: 'primary'
+ha_adguard::ha_role: 'replica'
 ha_adguard::cluster_nodes: []
 
 ha_adguard::keepalived_enabled: false
-ha_adguard::vrrp_priority: 100
 ha_adguard::vrrp_router_id: 51
 ha_adguard::vrrp_auth_pass: 'changeme'
 ha_adguard::vrrp_interface: 'eth0'
