--- a/.github/workflows/unit-tests.yml
+++ b/.github/workflows/unit-tests.yml
@@ -37,6 +37,9 @@ jobs:
       - name: Check syntax
         run: bundle exec rake syntax
 
+      - name: Run rubocop
+        run: bundle exec rake rubocop
+
   spec:
     name: Unit Tests (RSpec)
     runs-on: ubuntu-latest
@@ -55,11 +58,11 @@ jobs:
         run: bundle install --jobs 4 --retry 3 --path vendor/bundle
 
       - name: Prepare test fixtures
-        run: bundle exec rake spec_prep
+        run: bundle exec rake fixtures:prep
 
       - name: Run unit tests
-        run: bundle exec rake spec
+        run: bundle exec rake parallel_spec
 
       - name: Clean up test fixtures
         if: always()
-        run: bundle exec rake spec_clean
+        run: bundle exec rake fixtures:clean
