--- a/.github/workflows/acceptance-tests.yml
+++ b/.github/workflows/acceptance-tests.yml
@@ -63,7 +63,7 @@ jobs:
         run: bundle install --jobs 4 --retry 3 --with acceptance --path vendor/bundle
 
       - name: Prepare test fixtures
-        run: bundle exec rake spec_prep
+        run: bundle exec rake fixtures:prep
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -76,7 +76,7 @@ jobs:
 
       - name: Clean up test fixtures
         if: always()
-        run: bundle exec rake spec_clean
+        run: bundle exec rake fixtures:clean
 
   acceptance-rocky:
     name: Acceptance Tests (Rocky Linux 9)
@@ -102,7 +102,7 @@ jobs:
         run: bundle install --jobs 4 --retry 3 --with acceptance --path vendor/bundle
 
       - name: Prepare test fixtures
-        run: bundle exec rake spec_prep
+        run: bundle exec rake fixtures:prep
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -115,7 +115,7 @@ jobs:
 
       - name: Clean up test fixtures
         if: always()
-        run: bundle exec rake spec_clean
+        run: bundle exec rake fixtures:clean
 
   acceptance-cluster:
     name: Acceptance Tests (HA Cluster)
@@ -141,7 +141,7 @@ jobs:
         run: bundle install --jobs 4 --retry 3 --with acceptance --path vendor/bundle
 
       - name: Prepare test fixtures
-        run: bundle exec rake spec_prep
+        run: bundle exec rake fixtures:prep
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
@@ -154,4 +154,4 @@ jobs:
 
       - name: Clean up test fixtures
         if: always()
-        run: bundle exec rake spec_clean
+        run: bundle exec rake fixtures:clean
